FINAL COMMIT WITH FIRST VERSIONE OF RASD DOCUMENT

--- a/work_in_progress/RASD/RASD_version_1.lyx
+++ b/work_in_progress/RASD/RASD_version_1.lyx
@@ -89,7 +89,7 @@
 placement t
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -131,7 +131,7 @@ Paola Marchesini (mat.
 
 \begin_layout Date
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -150,7 +150,7 @@ phantom{x}
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -604,7 +604,7 @@ RASD sample from Oct.
 \begin_layout Itemize
 PayPal documentation (
 \begin_inset Flex URL
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -615,7 +615,7 @@ https://developer.paypal.com/docs/
 
  and 
 \begin_inset Flex URL
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -630,7 +630,7 @@ https://www.paypal.com/it/webapps/mpp/merchant
 \begin_layout Itemize
 General documentations about SMS gateway provider (
 \begin_inset Flex URL
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -641,7 +641,7 @@ https://www.smsglobal.com/business-sms/
 
  and 
 \begin_inset Flex URL
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -651,6 +651,13 @@ http://www.trendoo.it/invio-sms.html
 \end_inset
 
 ).
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
@@ -701,7 +708,7 @@ status collapsed
 \align center
 \begin_inset Graphics
 	filename images/mockup/websitehomepage.png
-	scale 20
+	scale 18
 
 \end_inset
 
@@ -717,10 +724,6 @@ Website, Home page
 
 \end_inset
 
-
-\end_layout
-
-\begin_layout Plain Layout
 
 \end_layout
 
@@ -766,7 +769,7 @@ Website, Look for car nearby
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -821,7 +824,7 @@ Website, Reserve a car
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -874,6 +877,29 @@ Website, Employee page with list
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=1cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Mobile application
 \end_layout
@@ -893,22 +919,6 @@ Mobile application
 \end_layout
 
 \begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-newgeometry{top=1cm}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 \begin_inset Float figure
 placement H
 wide false
@@ -919,7 +929,7 @@ status collapsed
 \align center
 \begin_inset Graphics
 	filename images/mockup/export2.png
-	scale 18
+	scale 16
 
 \end_inset
 
@@ -958,7 +968,7 @@ status collapsed
 \align center
 \begin_inset Graphics
 	filename images/mockup/export.png
-	scale 18
+	scale 16
 
 \end_inset
 
@@ -997,7 +1007,7 @@ status collapsed
 \align center
 \begin_inset Graphics
 	filename images/mockup/export3.png
-	scale 18
+	scale 16
 
 \end_inset
 
@@ -1036,7 +1046,7 @@ status collapsed
 \align center
 \begin_inset Graphics
 	filename images/mockup/export4.png
-	scale 18
+	scale 16
 
 \end_inset
 
@@ -1066,7 +1076,7 @@ Application, Employee page and List
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -1920,7 +1930,7 @@ We supposed that these properties hold in the analysed word:
 \end_layout
 
 \begin_layout Itemize
-All the cars are already accessible by the system.
+All the cars are already accessible by the system;
 \end_layout
 
 \begin_layout Itemize
@@ -1937,7 +1947,8 @@ The special parking areas are already defined;
 \end_layout
 
 \begin_layout Itemize
-All cars can park in all the parking available without pay any fine;
+All cars can park in all the parking available without pay any fine, in
+ respect of the law;
 \end_layout
 
 \begin_layout Itemize
@@ -1960,13 +1971,8 @@ There is an external company that deals with accident;
 \end_layout
 
 \begin_layout Itemize
-There are other employees, of our company, that deals with car parked in
- unsafe area;
-\end_layout
-
-\begin_layout Itemize
 If the user cannot open the car with the standard commands, at the headquarter,
- the operators have a special command to open cars.
+ the operators have a special command to open cars;
 \end_layout
 
 \begin_layout Itemize
@@ -1980,7 +1986,8 @@ The fine must be applied only if the initial battery level was more than
 
 \begin_layout Itemize
 Before the ride starts, the system keeps in memory the initial state of
- the car, to verify, at the end, the conditions for a discount;
+ the car, to verify, at the end, the final cost of the ride and the conditions
+ for a discount;
 \end_layout
 
 \begin_layout Itemize
@@ -2001,6 +2008,13 @@ There is a call center, deals with the emergency situation, localized in
 The employees works in couple, because of safety law.
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 Specific requirements
 \end_layout
@@ -2018,7 +2032,7 @@ User
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2041,6 +2055,13 @@ Use Case - User (and human).
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
 \end_inset
 
 
@@ -2069,7 +2090,7 @@ Create an account
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2247,6 +2268,13 @@ User, Use Case description - Create an account.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Login
 \end_layout
@@ -2270,7 +2298,7 @@ Login
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2443,6 +2471,13 @@ User, Use Case description - Login of the user.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Look for car nearby
 \end_layout
@@ -2466,7 +2501,7 @@ Look for car nearby
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2642,6 +2677,13 @@ User, Use Case description - Look for car nearby.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Reserve a car
 \end_layout
@@ -2665,7 +2707,7 @@ Reserve a car
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2841,6 +2883,13 @@ User, Use Case description - Reserve a car.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Select the 
 \begin_inset Quotes eld
@@ -2872,7 +2921,7 @@ Money saving Option
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3048,6 +3097,29 @@ User, Use Case description - Select the “Money saving option”.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=2cm}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Open the car
 \end_layout
@@ -3079,7 +3151,7 @@ status open
 <lyxtabular version="3" rows="6" columns="2">
 <features tabularvalignment="middle">
 <column alignment="center" valignment="top">
-<column alignment="left" valignment="top" width="9cm">
+<column alignment="left" valignment="top" width="11cm">
 <row>
 <cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
@@ -3265,6 +3337,29 @@ User, Use Case description - Open the car.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Finish the ride
 \end_layout
@@ -3288,7 +3383,7 @@ Finish the ride
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3465,6 +3560,13 @@ User, Use Case description - Finish the ride.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 View special parking area
 \end_layout
@@ -3488,7 +3590,7 @@ View special parking area
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3674,7 +3776,7 @@ Employee
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3724,7 +3826,7 @@ Login
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3892,6 +3994,13 @@ Employee, Use Case description - Login.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Change availability of the car
 \end_layout
@@ -3915,9 +4024,10 @@ Change availability of the car
 placement H
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
+\align center
 \begin_inset Tabular
 <lyxtabular version="3" rows="6" columns="2">
 <features tabularvalignment="middle">
@@ -4082,6 +4192,13 @@ Employee, Use Case description - Change availability of the car.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Know cars that they have to take care
 \end_layout
@@ -4105,7 +4222,7 @@ Know cars that they have to take care
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -4269,6 +4386,13 @@ Employee, Use Case description - Know cars that they have to take care.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Sequence diagrams
 \end_layout
@@ -4302,7 +4426,7 @@ status open
 \align center
 \begin_inset Graphics
 	filename images/diagram_section_svg/Login sequence diagram.pdf
-	scale 70
+	scale 80
 
 \end_inset
 
@@ -4327,6 +4451,13 @@ Sequence Diagrams - Login of the user.
 \end_layout
 
 \begin_layout Standard
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
 
 \end_layout
 
@@ -4375,7 +4506,7 @@ status open
 \align center
 \begin_inset Graphics
 	filename images/diagram_section_svg/Reservation and reachinf of the car sequence diagram.pdf
-	scale 70
+	scale 80
 
 \end_inset
 
@@ -4389,6 +4520,29 @@ Sequence Diagrams - Reservation and opening of the car (sequence diagrams).
 \end_inset
 
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=1.5cm}
 \end_layout
 
 \end_inset
@@ -4429,7 +4583,7 @@ status open
 \align center
 \begin_inset Graphics
 	filename images/diagram_section_svg/Change avaibility of the car bpmn activity.pdf
-	scale 70
+	scale 55
 
 \end_inset
 
@@ -4446,6 +4600,22 @@ Activity Diagrams - Change availability of the car.
 \end_inset
 
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
 \end_layout
 
 \end_inset
@@ -4490,7 +4660,7 @@ status open
 \align center
 \begin_inset Graphics
 	filename images/diagram_section_svg/Money saving option activity diagram.pdf
-	scale 50
+	scale 53
 
 \end_inset
 
@@ -4517,6 +4687,13 @@ Money saving option
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
 \end_inset
 
 
@@ -4555,7 +4732,7 @@ status open
 \align center
 \begin_inset Graphics
 	filename images/diagram_section_svg/Phase of the car state chart diagram.pdf
-	scale 65
+	scale 80
 
 \end_inset
 
@@ -4572,6 +4749,29 @@ State Chart - Phase of the car.
 \end_inset
 
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=1.5cm}
 \end_layout
 
 \end_inset
@@ -4608,7 +4808,7 @@ status open
 \align center
 \begin_inset Graphics
 	filename images/diagram_section_svg/Class diagram.pdf
-	scale 20
+	scale 45
 
 \end_inset
 
@@ -4629,6 +4829,45 @@ Class diagrams
 
 \begin_layout Plain Layout
 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+newgeometry{top=1cm}
 \end_layout
 
 \end_inset
@@ -4663,10 +4902,54 @@ Code
 \end_layout
 
 \begin_layout Standard
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
 \begin_inset External
 	template PDFPages
 	filename alloy_code/Final_Model_GuidoAll.pdf
-	extra LaTeX "pages={1-9}"
+	lyxscale 90
+	extra LaTeX "pages={1}"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+restoregeometry
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset External
+	template PDFPages
+	filename alloy_code/Final_Model_GuidoAll.pdf
+	extra LaTeX "pages={2-9}"
 
 \end_inset
 
@@ -4696,7 +4979,7 @@ Execution
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -4726,6 +5009,13 @@ Alloy execution.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Meta model
 \end_layout
@@ -4749,7 +5039,7 @@ Meta model
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -4778,7 +5068,7 @@ Alloy, Meta model.
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -4798,7 +5088,7 @@ Model
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -4824,7 +5114,7 @@ This is one of the instance found by Alloy Analyzer, for design purpose
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -4857,7 +5147,7 @@ Alloy, Complete model without Int.
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -4873,7 +5163,7 @@ restoregeometry
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -4882,6 +5172,13 @@ status open
 newgeometry{top=1cm}
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage newpage
 \end_inset
 
 
@@ -4914,7 +5211,7 @@ Complete alloy model
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -4951,7 +5248,7 @@ Alloy, Complete model with Int.
 
 \begin_layout Standard
 \begin_inset ERT
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
@@ -5019,13 +5316,20 @@ GitHub: used to manage the shared building process of that document;
 Alloy Analyzer: used to prove the consistency of the model presented above.
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 Hours of work 
 \end_layout
 
 \begin_layout Standard
 \begin_inset Tabular
-<lyxtabular version="3" rows="21" columns="4">
+<lyxtabular version="3" rows="20" columns="4">
 <features tabularvalignment="middle">
 <column alignment="center" valignment="top">
 <column alignment="center" valignment="top">
@@ -5416,44 +5720,6 @@ Paola Marchesini
 \begin_inset Text
 
 \begin_layout Plain Layout
-4/11
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-1
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
 5/11
 \end_layout
 
@@ -5767,7 +6033,7 @@ Paola Marchesini
 \begin_inset Text
 
 \begin_layout Plain Layout
-1
+3
 \end_layout
 
 \end_inset
@@ -5776,7 +6042,7 @@ Paola Marchesini
 \begin_inset Text
 
 \begin_layout Plain Layout
-1
+3
 \end_layout
 
 \end_inset
@@ -5805,7 +6071,7 @@ total
 \begin_inset Text
 
 \begin_layout Plain Layout
-56
+58
 \end_layout
 
 \end_inset
@@ -5814,7 +6080,7 @@ total
 \begin_inset Text
 
 \begin_layout Plain Layout
-46.5
+48.5
 \end_layout
 
 \end_inset
@@ -5830,6 +6096,29 @@ total
 </cell>
 </row>
 </lyxtabular>
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset FloatList figure
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset FloatList table
 
 \end_inset
 
