--- a/work_in_progress/RASD/RASD_version_1.lyx
+++ b/work_in_progress/RASD/RASD_version_1.lyx
@@ -280,6 +280,14 @@ User: he/she is a client of the service.
 \end_layout
 
 \begin_layout Itemize
+Employee: he/she is the employee of POwer Enjoy Company.
+\end_layout
+
+\begin_layout Itemize
+Human: he/she is a generic person that could use the application.
+\end_layout
+
+\begin_layout Itemize
 All Credentials: these are all information about the user that the system
  needs.
  The information contains name, last name, social security number, home
@@ -309,6 +317,15 @@ State: it is the state of the car which includes the level of battery, position
  If the vehicle is reserved or used the state will be associated with the
  respective user.
  
+\end_layout
+
+\begin_layout Itemize
+Availbale mode: in this mode the car can be reserve by an user.
+\end_layout
+
+\begin_layout Itemize
+Unavailbale mode: in this mode the car can not be reserved by an user, because
+ it has a critical battery level or other damages.
 \end_layout
 
 \begin_layout Itemize
@@ -372,12 +389,12 @@ Types of discount:
 \begin_deeper
 \begin_layout Itemize
 If the system detects the user took at least two other passengers onto the
- car, the system applies a discount of 10% on the last ride.
+ car, the system applies a discount of 10% on the last ride;
 \end_layout
 
 \begin_layout Itemize
 If a car is left with no more than 50% of the battery empty, the system
- applies a discount of 20% on the last ride.
+ applies a discount of 20% on the last ride;
 \end_layout
 
 \begin_layout Itemize
@@ -392,19 +409,24 @@ Battery level:
 
 \begin_deeper
 \begin_layout Itemize
-Full battery level
+Full battery level;
 \end_layout
 
 \begin_layout Itemize
-High battery level
+High battery level;
 \end_layout
 
 \begin_layout Itemize
-Low battery level
+Medium battery level;
 \end_layout
 
 \begin_layout Itemize
-Critical battery level
+Low battery level;
+\end_layout
+
+\begin_layout Itemize
+Critical battery level: level of the bettery in whic the car is not available,
+ because it has no enought charge to guarantee a ride.
 \end_layout
 
 \end_deeper
@@ -2090,7 +2112,7 @@ Create an account
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -2614,7 +2636,9 @@ Exit conditions
 \begin_inset Text
 
 \begin_layout Plain Layout
-The user visualizes correctly the cars nearby him/her position.
+The user visualizes correctly the cars available nearby him/her position.
+ The cars that are not availale (critical batery level or damages) are note
+ visualized.
 \end_layout
 
 \end_inset
@@ -3143,7 +3167,7 @@ Open the car
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3767,6 +3791,13 @@ User, Use Case description - View special parking area.
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subparagraph
 Modify his/her credentials
 \end_layout
@@ -3790,7 +3821,7 @@ Modify his/her credentials
 placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -3881,34 +3912,34 @@ The user select the command "change credential"
 \end_layout
 
 \begin_layout Enumerate
-Then the user selecet the specific field that he/she wants to update 
+Then the user selecet the specific field that he/she wants to update: 
 \end_layout
 
 \begin_deeper
 \begin_layout Enumerate
-the photo of his/her driving license
+the photo of his/her driving license;
 \end_layout
 
 \begin_layout Enumerate
-his/her phone number
+his/her phone number;
 \end_layout
 
 \begin_layout Enumerate
-his/her mail address
+his/her mail address;
 \end_layout
 
 \begin_layout Enumerate
-his/her payment information
+his/her payment information;
 \end_layout
 
 \begin_layout Enumerate
-his/her password
+his/her password;
 \end_layout
 
 \end_deeper
 \begin_layout Enumerate
 After the change the user has to see the updated information and confirm
- them if they are right
+ them if they are right.
 \end_layout
 
 \end_inset
@@ -4019,7 +4050,7 @@ Employee
 placement H
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -4033,7 +4064,7 @@ status collapsed
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
-Use Case - Employee
+Use Case - Employee (and Human)
 \end_layout
 
 \end_inset
